--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
         <section>
             <h2>Carátula del Ebook</h2>
-            <img src="ebook-data/caratula1.jpg" alt="Carátula del Ebook" />
+            <img src="ebooks-data/caratula1.jpg" alt="Carátulas del Ebook" />
         </section>
     </main>
     <footer>
